# Python-Course-2026-Team2

./: .gitignore  README.md
file-processing-api/: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
file-processing-api/migrations/: README  env.py
file-processing-api/migrations/versions/: c953f31691c8_create_archive_and_file_tables.py
file-processing-api/src/file_processing_api/: main.py
file-processing-api/src/file_processing_api/db/: database.py  models.py  seed.py  session.py
mini-document-analyzer/: .gitignore  README.md  cli.py  formatter.py  main.py
mini-document-analyzer/analyzer/: __init__.py  statistics.py  text_reader.py  tokenizer.py
