[project]
name = "file-processing-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Kateryna Hryhorieva", email = "fish4715@gmail.com"},
    {name = "Kostiantyn Yesypenko", email = "ky@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "sqlmodel (>=0.0.37,<0.0.38)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "python-multipart (>=0.0.22,<0.0.23)"
]

[tool.poetry]
packages = [{include = "file_processing_api", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=26.3.0,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]
